--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-standard": "^3.0.1",
+    "gh-pages": "^3.2.3",
     "lodash": "^4.17.11",
     "lorem-ipsum": "^1.0.6",
     "node-geocoder": "^3.25.0",
