--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "Iza-Boyaca",
   "version": "2.0.0",
+  "homepage": "https://bamc300.github.io/Iza-Boyaca/",
   "description": "Minimal Apostrophe Boilerplate",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "deploy":"gh-pages -d node.app"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/apostrophecms/Iza-Boyaca.git"
+    "url": "https://github.com/bamc300/Iza-Boyaca.git"
   },
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
@@ -29,7 +31,6 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-standard": "^3.0.1",
-    "gh-pages": "^3.2.3",
     "lodash": "^4.17.11",
     "lorem-ipsum": "^1.0.6",
     "node-geocoder": "^3.25.0",
